# osgnvpr

./: CMakeLists.txt  README.rst
examples/osgnvprcustom/: CMakeLists.txt  osgnvprcustom.cpp
examples/osgnvpreffectcompositor/: CMakeLists.txt  osgnvpreffectcompositor.cpp  osgnvpreffectcompositor.xml
examples/osgnvprfbo/: CMakeLists.txt  osgnvprfbo.cpp
examples/osgnvprshader/: CMakeLists.txt  osgnvprshader-fill.glsl  osgnvprshader-stroke.glsl  osgnvprshader.cpp
examples/osgnvprtext/: CMakeLists.txt  osgnvprtext.cpp
examples/osgnvprviewer/: CMakeLists.txt  osgnvprviewer-dragon.h  osgnvprviewer.cpp
include/osgNVPR/: Drawable  Export  Extensions  Font  Layout  Paint  Path  PathCommands  PathString  StateAttributes  String  Text  Transform  Util  Version  io_utils
src/: Drawable.cpp  Extensions.cpp  Font.cpp  Layout.cpp  Paint.cpp  Path.cpp  PathCommands.cpp  PathString.cpp  StateAttributes.cpp  Text.cpp  Transform.cpp  Util.cpp  io_utils.cpp
